[package]
name = "bluesky-trending"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
tungstenite = { version = "0.26.2", features = ["native-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1"
