[package]
name = "bluesky-trending"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
tungstenite = { version = "0.26.2", features = ["native-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.137"
axum = { version = "0.8.1", features = ["macros", "ws"] }
tokio = { version = "1.25.0", features = ["full"] }
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive", "env"] }
lazy_static = "1.4.0"
log = "0.4.25"